--- a/app/Ledger_Logistic/templates/Ledger_Logistic/login.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/login.html
@@ -211,5 +211,6 @@
             <p>© 2025 Ledger Logistic</p>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 </html>
