--- a/app/Ledger_Logistic/templates/Ledger_Logistic/login.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/login.html
@@ -92,6 +92,11 @@
             transform: none;
         }
         
+        .order {
+            margin: 0 auto;
+            display: block;
+        }
+        
         .message {
             padding: 1rem;
             border-radius: 8px;
