--- a/app/Ledger_Logistic/templates/Ledger_Logistic/verify_otp.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/verify_otp.html
@@ -181,6 +181,11 @@
         .back-link a:hover {
             color: #667eea;
         }
+        
+        .order {
+            margin: 0 auto;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -220,7 +225,24 @@
                 >
             </div>
             
-            <button type="submit" class="order">Verifica Codice</button>
+            <button type="submit" class="order">
+                <span class="default">Verifica Codice</span>
+                <span class="success">Codice verificato
+                    <svg viewbox="0 0 12 10">
+                        <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                    </svg>
+                </span>
+                <div class="box"></div>
+                <div class="truck">
+                    <div class="back"></div>
+                    <div class="front">
+                        <div class="window"></div>
+                    </div>
+                    <div class="light top"></div>
+                    <div class="light bottom"></div>
+                </div>
+                <div class="lines"></div>
+            </button>
             
             {% if otp_failed_attempts %}
                 <div class="attempts-counter {% if otp_failed_attempts >= 3 %}{% if otp_failed_attempts >= 4 %}danger{% else %}warning{% endif %}{% endif %}">
@@ -273,6 +295,7 @@
             this.value = numbers;
         });
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/button.js' %}"></script>
 </body>
 </html>
