--- a/app/Ledger_Logistic/templates/Ledger_Logistic/login.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/login.html
@@ -274,8 +274,8 @@
         const emailError = document.getElementById('emailError');
         
         function validateEmail(email) {
-            const emailRegex = /^[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$/;
-            return emailRegex.test(email);
+          const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+          return emailRegex.test(email);
         }
         
         function showEmailError(message) {
@@ -300,10 +300,11 @@
                 
                 if (!email.includes('@')) {
                     showEmailError('L\'email deve contenere il simbolo @');
-                } else if (!validateEmail(email)) {
-                    showEmailError('Inserisci un indirizzo email valido (es: utente@dominio.com)');
+                } else if (validateEmail(email)) {
+                hideEmailError();
+
                 } else {
-                    hideEmailError();
+                    showEmailError('Inserisci un indirizzo email valido (es: utente@dominio.com)');
                 }
             });
             
